spade-tests/src/snapshots/spade_tests__auto_traits__tuples_can_deny_data.snap
---
source: spade-tests/src/auto_traits.rs
---
struct A {
    x: (inv bool, bool)
}

fn needs_data<T: Data>(x: T) {}

fn test1(x: A) {
    needs_data(x)
}


error: Trait bound not satisfied. A does not implement core::Data
  ┌─ testinput:8:16
  │
5 │ fn needs_data<T: Data>(x: T) {}
  │                  ---- Required because of the trait bound specified here
  ·
8 │     needs_data(x)
  │                ^ A does not implement core::Data
